# watercooler-data

./: .gitignore  pyproject.toml
notebooks/: batch_transcription.ipynb  download_rss_audio.ipynb  prep_episode_metadata.ipynb
notebooks/results/: results_whisper-base-mlx.txt  results_whisper-medium-mlx.txt  results_whisper-small-mlx.txt  results_whisper-tiny.txt
src/: batch_transcribe.py
