[project]
name = "watercooler-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "feedparser>=6.0.11",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "mlx-whisper>=0.4.2",
    "openai>=1.65.4",
    "pandas>=2.2.3",
    "polars>=1.24.0",
    "pyarrow>=19.0.1",
    "pydub>=0.25.1",
    "qgrid>=1.3.1",
    "requests>=2.32.3",
]
